get things running in vs code